# auspex

./: .cleave-prompt.md  .gitignore  .session_log  CHANGELOG.md  Cargo.toml  Dioxus.toml  Dockerfile.operator  Justfile  README.md  omegon-compat.toml
.auspex/workflows/: default.flow
.cargo/: config.toml
.claude/distillations/: 2026-04-16-140715-omegon-integration-gaps.md
.github/workflows/: agent-images.yml  ci.yml  operator-image.yml  release.yml  site-pages-prep.yml
agents/auspex-agent/: AGENTS.md  PERSONA.md  agent.toml
agents/auspex-agent/mind/: facts.jsonl
agents/release-agent/: agent.toml
ai/lifecycle/: state.json
ai/memory/: facts.db-shm  facts.db-wal
assets/: main.css
assets/cop-plugin/: plugin.toml
assets/cop-plugin/tools/: cop_stub.sh
assets/cop-skill/: SKILL.md
assets/primary-coordinator-skill/: SKILL.md
auspex-core/: Cargo.toml  build.rs
auspex-core/src/: agent_packages.rs  armory.rs  authorization.rs  bootstrap.rs  capability_registry.rs  command_transport.rs  compatibility.rs  config.rs  container_discovery.rs  controller.rs  cop_feature.rs  cop_surface.rs  descriptor_ingest.rs  event_stream.rs  fixtures.rs  fleet_projection.rs  gateway_projection.rs  host_action_policy.rs  instance_registry.rs  instance_session.rs  ipc_client.rs  lib.rs  local_omegon_discovery.rs  local_omegon_probe.rs  oci_backend.rs  omegon_control.rs  omegon_version_pin.rs  operational_profile.rs  release_agent.rs  remote_session.rs  runtime_types.rs  secret_grants.rs  secret_orchestration.rs  session_event.rs  session_model.rs  state_engine.rs  telemetry.rs  tls_config.rs
auspex-operator/: Cargo.toml
auspex-operator/src/: crd.rs  external.rs  identity.rs  main.rs  mtls.rs  reconciler.rs
deploy/brutus-control-plane/: README.md  deployment.yaml  kustomization.yaml  namespace.yaml  rbac.yaml  service-account.yaml  service.yaml
deploy/brutus-home-proving-ground/: forge-steward.yaml  infra-sentinel.yaml  knowledge-curator.yaml  kustomization.yaml  media-operator.yaml
docs/: README.md  agent-orchestration-plan.md  app-skeleton-readiness.md  armory-overlay-preflight-plan.md  auspex-025-compatibility-capability-registry.md  auspex-acp-operational-profile-adoption.md  auspex-agent-affordance-paths.md  auspex-armory-nex-package-reconciliation.md  auspex-as-orchestration-gateway.md  auspex-authorization-recommendation.md  auspex-cnpg-persistence.md  auspex-data-model-v2.md  auspex-depth-style-spec.md  auspex-desktop-shell-frame.md  auspex-detached-service-lifecycle.md  auspex-embedded-central-runtime.md  auspex-embedded-operator-parity.md  auspex-fleet-runtime-projection.md  auspex-host-action-policy-gates.md  auspex-in-the-stack.md  auspex-instance-lifecycle-policy.md  auspex-instance-registry-schema.md  auspex-live-canvas-widget-system.md  auspex-multi-agent-runtime.md  auspex-omegon-contract-drift-audit.md  auspex-operational-profile-metadata-ingestion.md  auspex-parity-upgrade-program.md  auspex-primary-coordinator.md  auspex-release-framework.md  auspex-runtime-adoption-ladder.md  auspex-runtime-backends.md  auspex-session-dispatcher.md  auspex-telemetry-aggregation-engine.md  auspex-telemetry-aggregation.md  auspex-worker-inheritance.md  auspex-worker-profiles.md  authorization-substrate-evaluation-for-auspex.md  black-meridian-stack-doctrine.md  brutus-deployment-status.md  brutus-home-proving-ground.md  (+51 more)
docs/handoffs/: 2026-06-02-native-runtime-observation.md
docs/research/: oci-deployment-landscape.md
examples/compose/: auspex-with-socket-proxy.yml
openspec/archive/auspex-data-model-v2/specs/: frontend.md
openspec/changes/auspex-data-model-v2/: design.md  proposal.md  tasks.md
openspec/changes/auspex-instance-lifecycle-policy/: proposal.md
openspec/changes/auspex-instance-lifecycle-policy/specs/: state.md
openspec/changes/auspex-release-framework/: design.md  proposal.md  tasks.md
openspec/changes/auspex-release-framework/specs/: release.md
openspec/changes/auspex-telemetry-aggregation/: proposal.md
openspec/changes/auspex-telemetry-aggregation/specs/: telemetry.md
pkl/: DeployProfile.pkl  RemoteInstances.pkl  WorkerProfile.pkl
profiles/: auspex-operator.toml  coding-agent.toml  discord-agent.toml  home-forge-steward.toml  home-infra-sentinel.toml  home-knowledge-curator.toml  home-media-operator.toml  infra-engineer.toml  omegon-base.toml  overnight-reviewer.toml  rust-dev.toml
release-posts/: styrene_lab_vox__v0_1_5.md
scripts/: __init__.py  release_manifest.py  release_preflight.py
scripts/tests/: test_release_manifest.py  test_release_preflight.py
site/: README.md  astro.config.mjs  package-lock.json  package.json  wrangler.toml
site/src/layouts/: BaseLayout.astro
site/src/pages/: index.astro
src/: app.rs  audit_timeline.rs  bootstrap.rs  command_transport.rs  config.rs  controller.rs  cop_feature.rs  cop_surface.rs  event_stream.rs  fixtures.rs  instance_registry.rs  instance_session.rs  ipc_client.rs  main.rs  omegon_control.rs  remote_session.rs  runtime_types.rs  screens.rs  session_event.rs  session_model.rs  state_engine.rs  telemetry.rs  workflow.rs
tests/fixtures/: github-release-vox-v0.1.5.json
tools/keygen/: Cargo.toml
tools/keygen/src/: main.rs
web/: Trunk.toml  index.html
