[package]
name = "auspex"
version = "0.0.1-rc.6"
edition = "2024"

[package.metadata.omegon]
minimum_version = "0.15.7"
maximum_tested_version = "0.15.7"
control_plane_schema = 2

[dependencies]
dioxus = { version = "0.6", features = ["desktop"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
tungstenite = { version = "0.28", default-features = false, features = ["handshake", "rustls-tls-webpki-roots"] }

[dev-dependencies]
pretty_assertions = "1"
