[workspace]
members = [".", "auspex-core", "auspex-operator", "tools/keygen"]
resolver = "3"

[package]
name = "auspex"
version = "0.2.0-rc.1"
edition = "2024"

[package.metadata.omegon]
minimum_version = "0.15.20"
maximum_tested_version = "0.16.0"
control_plane_schema = 2

[features]
default = ["desktop"]
desktop = [
    "auspex-core/desktop",
    "dioxus/desktop",
    "dep:tokio-tungstenite",
    "dep:rpkl",
    "tokio/process",
    "tokio/io-util",
    "tokio/net",
]
web = [
    "auspex-core/web",
    "dioxus/web",
    "dep:web-sys",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:gloo-timers",
    "getrandom/wasm_js",
]

[dependencies]
auspex-core = { path = "auspex-core", default-features = false }
dioxus = { version = "0.7", features = ["launch", "devtools", "logger", "lib"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"
toml = "0.8"
tokio = { version = "1", features = ["time", "rt", "sync"] }
tokio-util = "0.7"
async-trait = "0.1"
anyhow = "1"
futures-util = "0.3"
tungstenite = { version = "0.28", default-features = false }
rmp-serde = "1"
omegon-traits = { path = "../omegon/core/crates/omegon-traits" }

# Desktop-only: async WebSocket via tokio
tokio-tungstenite = { version = "0.28", optional = true, default-features = false, features = ["connect", "handshake", "rustls-tls-webpki-roots"] }

# Desktop-only: pkl config evaluation
rpkl = { version = "0.8", optional = true }

# Web-only: browser WebSocket via web-sys
web-sys = { version = "0.3", optional = true, features = ["WebSocket", "MessageEvent", "CloseEvent", "ErrorEvent", "BinaryType"] }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
gloo-timers = { version = "0.3", optional = true, features = ["futures"] }

# Entropy source — getrandom v0.3 requires explicit `wasm_js` feature on wasm32.
# This is a transitive dep; we declare it here only to enable the feature.
getrandom = "0.3"

[dev-dependencies]
pretty_assertions = "1"
toml = "0.8"
