[package]
name = "auspex-core"
version = "0.2.0-rc.1"
edition = "2024"
description = "Core logic, types, and state machines for Auspex — the operator shell for Omegon"

[package.metadata.omegon]
minimum_version = "0.15.20"
maximum_tested_version = "0.15.26"
control_plane_schema = 2

[features]
default = ["desktop"]
desktop = [
    "dep:tokio-tungstenite",
    "dep:rpkl",
    "tokio/process",
    "tokio/io-util",
    "tokio/net",
]
web = [
    "dep:web-sys",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:gloo-timers",
]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"
toml = "0.8"
tokio = { version = "1", features = ["time", "rt", "sync", "macros"] }
tokio-util = "0.7"
async-trait = "0.1"
anyhow = "1"
futures-util = "0.3"
tungstenite = { version = "0.28", default-features = false }
rmp-serde = "1"
omegon-traits = { path = "../../omegon/core/crates/omegon-traits" }

# Desktop-only: async WebSocket via tokio
tokio-tungstenite = { version = "0.28", optional = true, default-features = false, features = ["connect", "handshake", "rustls-tls-webpki-roots"] }

# Desktop-only: pkl config evaluation
rpkl = { version = "0.8", optional = true }

# Web-only: browser WebSocket via web-sys
web-sys = { version = "0.3", optional = true, features = ["WebSocket", "MessageEvent", "CloseEvent", "ErrorEvent", "BinaryType", "Window", "Location", "UrlSearchParams"] }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
gloo-timers = { version = "0.3", optional = true, features = ["futures"] }

[dev-dependencies]
pretty_assertions = "1"
toml = "0.8"
