[package]
name = "auspex-operator"
version = "0.1.0"
edition = "2024"
description = "Kubernetes operator for Omegon agent fleet management"

[[bin]]
name = "auspex-operator"
path = "src/main.rs"

[dependencies]
auspex-core = { path = "../auspex-core", default-features = false, features = ["desktop"] }

# Kubernetes
kube = { version = "0.99", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "0.24", features = ["v1_32"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP server for fleet API
axum = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Schema generation
schemars = "0.8"
